Change keyboard initialization animation from 350 ms to 100 ms

BUG=721197

Review-Url: https://codereview.chromium.org/2877373002
Cr-Commit-Position: refs/heads/master@{#471994}

Former-commit-id: 6eecabd7b0f4d82b3d5a452716c3f02d546d4c96